--- a/src/app/pages/our-story/our-story.component.html
+++ b/src/app/pages/our-story/our-story.component.html
@@ -1,124 +1,128 @@
-<
-<main class="our-story">
-  <h1 class="page-title">Our Story</h1>
+<section class="page-container">
+  <main class="our-story">
+    <h1 class="page-title">Our Story</h1>
 
-  <img
-    class="hero-image"
-    ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/322392439_631686738645560_5768549764657518142_n.jpg"
-    width="960"
-    height="640"
-    alt="Sanctuary Image"
-  />
-  <section class="intro-text">
-    <p><strong>Welcome to Spirit Animals Sanctuary!</strong></p>
-    <p>
-      We are a compassionate vegan sanctuary located in Bucovina, Romania,
-      dedicated to providing <strong>a safe haven for animals</strong> who have
-      been rescued from the horrors of slaughter. At our sanctuary, these
-      beautiful souls find solace, freedom, and
-      <strong>a life filled with love, happiness, peace, and equality.</strong>
-    </p>
-    <p>
-      Our mission is rooted in the belief that
-      <strong
-        >all sentient beings deserve to be treated with kindness, respect, and
-        empathy.</strong
-      >
-      We firmly reject the notion that animals are mere commodities for human
-      consumption. Instead,
-      <strong
-        >we strive to create a world where every individual—human and non-human
-        alike—can coexist harmoniously.</strong
-      >
-    </p>
-    <p>
-      At Spirit Animals Sanctuary, we go beyond the traditional approach of
-      rescue and rehabilitation. We recognize that animals are not property, but
-      individuals with their own unique personalities, emotions, and desires.
-      With this understanding, we provide them with
-      <strong>the freedom to express their innate behaviors</strong>, allowing
-      them to flourish in an environment that respects their natural instincts.
-    </p>
-    <p>
-      Our dedicated team of caregivers works tirelessly to ensure that each
-      resident at the sanctuary receives
-      <strong>the highest level of care and attention</strong>. From specialized
-      dietary needs to medical treatment and emotional support,
-      <strong>we prioritize the well-being of our residents</strong> above all
-      else. Every animal that finds refuge within our sanctuary
-      <strong
-        >is embraced as a cherished family member, surrounded by love,
-        compassion, and understanding.</strong
-      >
-    </p>
-    <p>
-      Education and outreach play an integral role in our mission. We believe
-      that <strong>by raising awareness</strong> about the inherent worth and
-      dignity of every living being, we can inspire others to embrace a
-      compassionate and vegan lifestyle. We strive to foster a greater sense of
-      empathy and understanding towards animals,
-      <strong
-        >promoting a harmonious coexistence between humans and our animal
-        friends.</strong
-      >
-    </p>
-    <p>
-      Join us on this incredible journey of compassion and transformation.
-      Together, we can build a world where every being is valued, cherished, and
-      respected.
-    </p>
-    <p>
-      <strong>With love and gratitude,</strong><br /><strong
-        >The Spirit Animals Sanctuary Team</strong
-      >
-    </p>
-  </section>
+    <img
+      class="hero-image"
+      ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/322392439_631686738645560_5768549764657518142_n.jpg"
+      width="960"
+      height="640"
+      alt="Sanctuary Image"
+    />
+    <section class="intro-text">
+      <p><strong>Welcome to Spirit Animals Sanctuary!</strong></p>
+      <p>
+        We are a compassionate vegan sanctuary located in Bucovina, Romania,
+        dedicated to providing <strong>a safe haven for animals</strong> who
+        have been rescued from the horrors of slaughter. At our sanctuary, these
+        beautiful souls find solace, freedom, and
+        <strong
+          >a life filled with love, happiness, peace, and equality.</strong
+        >
+      </p>
+      <p>
+        Our mission is rooted in the belief that
+        <strong
+          >all sentient beings deserve to be treated with kindness, respect, and
+          empathy.</strong
+        >
+        We firmly reject the notion that animals are mere commodities for human
+        consumption. Instead,
+        <strong
+          >we strive to create a world where every individual—human and
+          non-human alike—can coexist harmoniously.</strong
+        >
+      </p>
+      <p>
+        At Spirit Animals Sanctuary, we go beyond the traditional approach of
+        rescue and rehabilitation. We recognize that animals are not property,
+        but individuals with their own unique personalities, emotions, and
+        desires. With this understanding, we provide them with
+        <strong>the freedom to express their innate behaviors</strong>, allowing
+        them to flourish in an environment that respects their natural
+        instincts.
+      </p>
+      <p>
+        Our dedicated team of caregivers works tirelessly to ensure that each
+        resident at the sanctuary receives
+        <strong>the highest level of care and attention</strong>. From
+        specialized dietary needs to medical treatment and emotional support,
+        <strong>we prioritize the well-being of our residents</strong> above all
+        else. Every animal that finds refuge within our sanctuary
+        <strong
+          >is embraced as a cherished family member, surrounded by love,
+          compassion, and understanding.</strong
+        >
+      </p>
+      <p>
+        Education and outreach play an integral role in our mission. We believe
+        that <strong>by raising awareness</strong> about the inherent worth and
+        dignity of every living being, we can inspire others to embrace a
+        compassionate and vegan lifestyle. We strive to foster a greater sense
+        of empathy and understanding towards animals,
+        <strong
+          >promoting a harmonious coexistence between humans and our animal
+          friends.</strong
+        >
+      </p>
+      <p>
+        Join us on this incredible journey of compassion and transformation.
+        Together, we can build a world where every being is valued, cherished,
+        and respected.
+      </p>
+      <p>
+        <strong>With love and gratitude,</strong><br /><strong
+          >The Spirit Animals Sanctuary Team</strong
+        >
+      </p>
+    </section>
 
-  <h3 class="team-heading">Team members</h3>
+    <h3 class="team-heading">Team members</h3>
 
-  <section class="team-grid">
-    <article class="team-member">
-      <img
-        ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/277249683_952101651978297_3372973809367646109_n-611x441.webp"
-        width="611"
-        height="441"
-        alt="Andreea Balaurea"
-      />
-      <h4>Andreea Balaurea</h4>
-      <p><strong>Founder</strong><br />Meet Andreea...</p>
-    </article>
+    <section class="team-grid">
+      <article class="team-member">
+        <img
+          ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/277249683_952101651978297_3372973809367646109_n-611x441.webp"
+          width="611"
+          height="441"
+          alt="Andreea Balaurea"
+        />
+        <h4>Andreea Balaurea</h4>
+        <p><strong>Founder</strong><br />Meet Andreea...</p>
+      </article>
 
-    <article class="team-member">
-      <img
-        ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/285073145_989309864924142_5276283331233685044_n-561x405.jpg"
-        width="561"
-        height="405"
-        alt="Nicusor Popa"
-      />
-      <h4>Nicusor Popa</h4>
-      <p><strong>Founder</strong><br />Meet Nicusor...</p>
-    </article>
+      <article class="team-member">
+        <img
+          ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/285073145_989309864924142_5276283331233685044_n-561x405.jpg"
+          width="561"
+          height="405"
+          alt="Nicusor Popa"
+        />
+        <h4>Nicusor Popa</h4>
+        <p><strong>Founder</strong><br />Meet Nicusor...</p>
+      </article>
 
-    <article class="team-member">
-      <img
-        ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/92796732_1351492821709036_4668241640974974976_n-1024x682-611x441.jpg"
-        width="611"
-        height="441"
-        alt="Doina Badea"
-      />
-      <h4>Doina Badea</h4>
-      <p><strong>Mentor</strong><br />Meet Doina...</p>
-    </article>
+      <article class="team-member">
+        <img
+          ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/92796732_1351492821709036_4668241640974974976_n-1024x682-611x441.jpg"
+          width="611"
+          height="441"
+          alt="Doina Badea"
+        />
+        <h4>Doina Badea</h4>
+        <p><strong>Mentor</strong><br />Meet Doina...</p>
+      </article>
 
-    <article class="team-member">
-      <img
-        ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/347431522_644117991094783_8094866234821651623_n-1024x683-561x406.webp"
-        width="561"
-        height="406"
-        alt="Amos"
-      />
-      <h4>Amos</h4>
-      <p><strong>Chief of Hearts</strong><br />Meet Amos...</p>
-    </article>
-  </section>
-</main>
+      <article class="team-member">
+        <img
+          ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/347431522_644117991094783_8094866234821651623_n-1024x683-561x406.webp"
+          width="561"
+          height="406"
+          alt="Amos"
+        />
+        <h4>Amos</h4>
+        <p><strong>Chief of Hearts</strong><br />Meet Amos...</p>
+      </article>
+    </section>
+  </main>
+</section>
