--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,13 @@
 <mat-toolbar color="primary" class="main-toolbar">
   <div class="toolbar-content">
-    <a routerLink="/" class="title">Spirit Animals Sanctuary</a>
+    <a routerLink="/" class="title"
+      ><img
+        ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/Asset-4Mod1.png"
+        alt="logo"
+        width="100"
+        height="100"
+        class="logo"
+    /></a>
 
     <span class="spacer"></span>
 
