--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -108,6 +108,11 @@
         </div>
       </div>
     </div>
+    <div class="terms-and-privacy">
+      <a routerLink="/terms-and-conditions">Terms and Conditions</a>
+      <span class="separator"> | </span>
+      <a routerLink="/privacy">Privacy Policy</a>
+    </div>
     <div class="copyright-container">&copy; 2025 Spirit Animals Sanctuary</div>
   </div>
 </mat-toolbar>
