add backend url and test-mode-banner component

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -38,7 +38,10 @@
 
     <div class="or-divider"><span>OR</span></div>
 
-    <a href="http://localhost:3000/api/auth/google" class="google-button">
+    <a
+      href="https://spirit-animals-sanctuary-backend.onrender.com/api/auth/google"
+      class="google-button"
+    >
       <img
         src="https://developers.google.com/identity/images/g-logo.png"
         alt="Google logo"
